--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -1,100 +1,68 @@
-<!-- Start our Proposal section -->
 <section id="proposal" class="section proposal-section">
   <div class="container">
     <div class="proposal-container">
 
-      <h2 class="visually-hidden" data-i18n="proposal_hidden_title">
-        Proposal to leave an application
-      </h2> 
+      <h2 class="visually-hidden" data-i18n="proposal_hidden_title"></h2>
 
-      <p class="title" data-i18n-html="proposal_title">
-        Extended <span class="title-language">Service</span> Package
-      </p>
-      <!-- <h1 class="hero-text" data-i18n-html="hero_title"></h1> -->
+      <p class="title" data-i18n-html="proposal_title"></p>
 
       <div class="proposal-inner">
         <div class="proposal-wrapper">
           <ul class="proposal-list">
+
             <li class="proposal-item">
               <div class="icon-wrapper">
                 <svg class="check-icon" width="14" height="14">
                   <use href="/img/icons.svg#icon-check"></use>
                 </svg>
               </div>
-              <p class="proposal-item-text" data-i18n="proposal_item_apostille">
-                Document Apostille of personal and corporate documents for
-                official use in the Czech Republic and abroad.
-              </p>
-
+              <p class="proposal-item-text" data-i18n-html="proposal_item_apostille"></p>
             </li>
+
             <li class="proposal-item">
               <div class="icon-wrapper">
                 <svg class="check-icon" width="14" height="14">
                   <use href="/img/icons.svg#icon-check"></use>
                 </svg>
               </div>
-              <p class="proposal-item-text" data-i18n="proposal_item_databox">
-                Datová schránka Setup Application preparation and full
-                assistance in opening a datová schránka, including client
-                presence.
-              </p>
-
+              <p class="proposal-item-text" data-i18n-html="proposal_item_databox"></p>
             </li>
+
             <li class="proposal-item">
               <div class="icon-wrapper">
                 <svg class="check-icon" width="14" height="14">
                   <use href="/img/icons.svg#icon-check"></use>
                 </svg>
               </div>
-              <p class="proposal-item-text" data-i18n="proposal_item_bank">
-                Bank Account Opening Support with opening personal and corporate
-                bank accounts in Czech banks, with required client presence.
-              </p>
-
+              <p class="proposal-item-text" data-i18n-html="proposal_item_bank"></p>
             </li>
+
             <li class="proposal-item">
               <div class="icon-wrapper">
                 <svg class="check-icon" width="14" height="14">
                   <use href="/img/icons.svg#icon-check"></use>
                 </svg>
               </div>
-              <p class="proposal-item-text" data-i18n="proposal_item_power">
-                Service Power of Attorney Preparation of a power of attorney for
-                full service support, notarized at the client’s consulate if
-                required.
-              </p>
-
+              <p class="proposal-item-text" data-i18n-html="proposal_item_power"></p>
             </li>
+
           </ul>
+
           <a href="#application-form" class="button proposal-button" data-i18n="proposal_button">
-            Leave an application
           </a>
 
-        
           <div class="books-image-wrapper">
             <picture>
-              <source
-                srcset="
-                  /img/books/books@1x.avif 1x,
-                  /img/books/books@2x.avif 2x
-                "
-                type="image/avif"
-              />
-              <source
-                srcset="/img/books/books@1x.png 1x, /img/books/books@2x.png 2x"
-              />
-              <img
-                src="/img/books/books@1x.png"
-                alt="Tall stack of books"
-                class="books-img animated"
-                width="321"
-                height="368"
-              />
+              <source srcset="/img/books/books@1x.avif 1x, /img/books/books@2x.avif 2x" type="image/avif" />
+              <source srcset="/img/books/books@1x.png 1x, /img/books/books@2x.png 2x" />
+              <img src="/img/books/books@1x.png" alt="Tall stack of books" class="books-img animated" width="321"
+                height="368" />
             </picture>
           </div>
+
         </div>
       </div>
     </div>
   </div>
 </section>
-<!-- End our Proposal section -->
+
