--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,6 @@
   <div class="container">
     <nav class="header-nav">
 
-      <!-- ЛОГОТИП (НЕ переводим) -->
       <div class="nav-logo">
         <a href="/green-frog">
           <span class="logo-green-span">GreenFrog</span><span class="logo-span">Office</span>
@@ -11,36 +10,29 @@
 
       <div class="page-nav">
         <ul class="header-nav-list">
-
           <li class="nav-item">
-            <a href="#about" class="nav-link" data-i18n="nav_services">
-              Services
-            </a>
+            <a href="#about" class="nav-link" data-i18n="nav_services"></a>
           </li>
 
           <li class="nav-item">
-            <a href="#reviews" class="nav-link" data-i18n="nav_reviews">
-              Reviews
-            </a>
+            <a href="#reviews" class="nav-link" data-i18n="nav_reviews"></a>
           </li>
 
           <li class="nav-item">
-            <a href="#application-form" class="nav-link" data-i18n="nav_contact">
-              Contact us
-            </a>
+            <a href="#application-form" class="nav-link" data-i18n="nav_contact"></a>
           </li>
-
         </ul>
       </div>
+
       <div class="lang-switcher">
         <button type="button" data-lang="en" class="lang-btn">EN</button>
         <button type="button" data-lang="ru" class="lang-btn">RU</button>
         <button type="button" data-lang="uk" class="lang-btn">UA</button>
       </div>
 
-
     </nav>
   </div>
 </header>
+
 
 
