--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -52,7 +52,10 @@
   padding: 280px 16px 20px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  /* ← центр по горизонтали */
+  text-align: center;
+  /* ← центр текста */
 }
 
 .hero-text {
@@ -66,6 +69,9 @@
       rgba(255, 255, 255, 0.01),
       rgba(0, 0, 0, 0.04));
   padding: 8px 12px;
+  /* max-width: 300px; */
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .hero-english {
@@ -84,8 +90,7 @@
   border: 5px solid rgb(231, 100, 7);
 
   box-sizing: border-box;
-  margin-top: 45px;
-  margin-left: 15px;
+  margin: 45px auto 0;
 }
 
 .button.hero-button:hover,
