--- a/src/partials/about_us.html
+++ b/src/partials/about_us.html
@@ -1,7 +1,11 @@
 <section id="about" class="section about">
   <div class="container">
 
-    <h2 class="section-title" data-i18n="about_title"></h2>
+    <!-- <h2 class="section-title animated" data-i18n="about_title"></h2> -->
+<h2 class="section-title animated">
+  <span data-i18n="about_title"></span>
+  <span class="title-underline"></span>
+</h2>
 
     <p class="section-subtitle" data-i18n="about_subtitle"></p>
 
