--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -55,8 +55,8 @@
             <picture>
               <source srcset="/img/books/books@1x.avif 1x, /img/books/books@2x.avif 2x" type="image/avif" />
               <source srcset="/img/books/books@1x.png 1x, /img/books/books@2x.png 2x" />
-              <img src="/img/books/books@1x.png" alt="Tall stack of books" class="books-img animated" width="321"
-                height="368" />
+              <img src="/img/books/books@1x.png" alt="Tall stack of books" class="books-img animated from-right" width="321"
+                height="600" />
             </picture>
           </div>
 
