--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,12 @@
 <section id="hero" class="hero-section">
   <div class="container hero-content">
 
-    <h1 class="hero-text" data-i18n-html="hero_title"></h1>
+    <h1 class="hero-text">
+      <span data-i18n="hero.before"></span>
+      <span class="hero-english" data-i18n="hero.highlight"></span>
+      <span data-i18n="hero.after"></span>
+    </h1>
+
 
     <a href="#application-form" class="button hero-button animated" data-i18n="hero_button">
     </a>
