--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -108,17 +108,17 @@
   }
 
   .hero-content {
-    padding: 320px 32px 32px;
+    padding: 260px 32px 32px;
     align-items: flex-start;
     /* ← ВЛЕВО */
     text-align: left;
   }
 
   .hero-text {
-    font-size: 56px;
+  font-size: 56px;
     line-height: 1.16;
     max-width: 520px;
-    margin: 0;
+    margin: 40px 0 0;
   }
 
   .hero-button {
@@ -155,9 +155,10 @@
   .hero-text {
     font-size: 60px;
     max-width: 560px;
+    margin: 60px 0 0;
+    }
   }
 
   .hero-checkmark {
     margin-top: 83px;
   }
-}
