--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -13,14 +13,9 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    overflow: hidden;
-  
+    overflow: hidden; 
 
-  /* background-image:
-    linear-gradient(95.97deg,
-      rgba(0, 0, 0, 0.4) 36.36%,
-      rgba(0, 0, 0, 0) 51.43%),
-    url(/img/hero/block_mob@1x.jpg); */
+
 }
 .hero-section::before {
   content: '';
@@ -52,13 +47,15 @@
   padding: 280px 16px 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  
+  /* align-items: center; */
   /* ← центр по горизонтали */
-  text-align: center;
+  /* text-align: center; */
   /* ← центр текста */
 }
 
 .hero-text {
+   
   font-family: inherit;
   font-size: 32px;
   line-height: 1.1;
@@ -68,9 +65,8 @@
   background: linear-gradient(180deg,
       rgba(255, 255, 255, 0.01),
       rgba(0, 0, 0, 0.04));
-  padding: 8px 12px;
-  /* max-width: 300px; */
-    margin-left: auto;
+  padding: 8px 12px;  
+    margin-left: 0;
     margin-right: auto;
 }
 
@@ -84,6 +80,7 @@
   position: relative;
   z-index: 5;
   cursor: pointer;
+ 
 
   color: rgb(231, 100, 7);
   background-color: #ffffff;
