--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -13,7 +13,7 @@
             <li class="proposal-item">
               <div class="icon-wrapper">
                 <svg class="check-icon" width="14" height="14">
-                  <use href="/img/icons.svg#icon-check"></use>
+                  <use href="./img/icons.svg#icon-check"></use>
                 </svg>
               </div>
               <p class="proposal-item-text" data-i18n-html="proposal_item_apostille"></p>
@@ -22,7 +22,7 @@
             <li class="proposal-item">
               <div class="icon-wrapper">
                 <svg class="check-icon" width="14" height="14">
-                  <use href="/img/icons.svg#icon-check"></use>
+                  <use href="./img/icons.svg#icon-check"></use>
                 </svg>
               </div>
               <p class="proposal-item-text" data-i18n-html="proposal_item_databox"></p>
@@ -31,7 +31,7 @@
             <li class="proposal-item">
               <div class="icon-wrapper">
                 <svg class="check-icon" width="14" height="14">
-                  <use href="/img/icons.svg#icon-check"></use>
+                  <use href="./img/icons.svg#icon-check"></use>
                 </svg>
               </div>
               <p class="proposal-item-text" data-i18n-html="proposal_item_bank"></p>
@@ -40,7 +40,7 @@
             <li class="proposal-item">
               <div class="icon-wrapper">
                 <svg class="check-icon" width="14" height="14">
-                  <use href="/img/icons.svg#icon-check"></use>
+                  <use href="./img/icons.svg#icon-check"></use>
                 </svg>
               </div>
               <p class="proposal-item-text" data-i18n-html="proposal_item_power"></p>
@@ -55,7 +55,7 @@
             <picture>
               <source srcset="/img/books/books@1x.avif 1x, /img/books/books@2x.avif 2x" type="image/avif" />
               <source srcset="/img/books/books@1x.png 1x, /img/books/books@2x.png 2x" />
-              <img src="/img/books/books@1x.png" alt="Tall stack of books" class="books-img animated from-right" width="321"
+              <img src="./img/books/books@1x.png" alt="Tall stack of books" class="books-img animated from-right" width="321"
                 height="600" />
             </picture>
           </div>
