--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -9,7 +9,7 @@
 
       <button class="nav-btn prev" aria-label="Previous review" type="button">
         <svg class="nav-btn-icon prev-icon" width="24" height="24" aria-hidden="true">
-          <use href="/img/icons.svg#icon-checkmark"></use>
+          <use href="./img/icons.svg#icon-checkmark"></use>
         </svg>
       </button>
 
@@ -53,7 +53,7 @@
 
       <button class="nav-btn next" aria-label="Next review" type="button">
         <svg class="nav-btn-icon next-btn" width="24" height="24" aria-hidden="true">
-          <use href="/img/icons.svg#icon-checkmark"></use>
+          <use href="./img/icons.svg#icon-checkmark"></use>
         </svg>
       </button>
 
