--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -77,11 +77,10 @@
   z-index: 5;
   cursor: pointer;
   margin: 0 auto;
- 
-
-  color: rgb(231, 100, 7);
-  background-color: #ffffff;
+  color:rgb(231, 100, 7); 
   border: 5px solid rgb(231, 100, 7);
+  background-color: rgba(255, 255, 255, 0.2);
+ 
 
   box-sizing: border-box;
   margin: 45px auto 0;
@@ -89,10 +88,12 @@
 
 .button.hero-button:hover,
 .button.hero-button:focus-visible,
-.button.hero-button:active {
-  background-color: rgba(129, 167, 109, 1);
+.button.hero-button:active { 
   border: 5px solid #ffffff;
   color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.2);
+  
+  
 }
 
 
@@ -179,7 +180,7 @@
   .hero-button {
     max-width: 306px;
       font-size: 18px;
-      margin-left: 0;
+      margin-left: 15px;
   }
 
   .hero-checkmark {
@@ -256,7 +257,9 @@
       max-width: 520px;
     }
 
-  .hero-button {
+  button.hero-button {
     margin-left: 0;
+   
+    
   }
 }
