--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -34,12 +34,31 @@
 /* Mobile retina */
 @media (-webkit-min-device-pixel-ratio: 2),
 (min-resolution: 192dpi) {
-  .hero-section {
+  .hero-section {    
     background-image:
+        linear-gradient(95.97deg,
+          rgba(0, 0, 0, 0.18) 28%,
+          rgba(0, 0, 0, 0) 50%),
+        url(/img/hero/block_mob@2x.jpg);
+        /* linear-gradient(95.97deg,
+          rgba(0, 0, 0, 0.25) 40%,
+          rgba(0, 0, 0, 0.08) 70%),
+        url(/img/hero/block_mob@2x.jpg); */
+    /* background-image:
+        linear-gradient(95.97deg,
+          rgba(0, 0, 0, 0.22) 30%,
+          rgba(0, 0, 0, 0) 55%),
+        url(/img/hero/block_mob@2x.jpg); */
+    /* background-image:
+        linear-gradient(95.97deg,
+          rgba(0, 0, 0, 0.28) 32%,
+          rgba(0, 0, 0, 0.05) 52%),
+        url(/img/hero/block_mob@2x.jpg); */
+    /* background-image:
       linear-gradient(95.97deg,
         rgba(0, 0, 0, 0.4) 36.36%,
         rgba(0, 0, 0, 0) 51.43%),
-      url(/img/hero/block_mob@2x.jpg);
+      url(/img/hero/block_mob@2x.jpg); */
   }
 }
 
