--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -21,10 +21,10 @@
   content: '';
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.05);
+  /* background: rgba(0, 0, 0, 0.05); */
   /* регулируй темноту */
-  pointer-events: none;
-  z-index: 1;
+  /* pointer-events: none;
+  z-index: 1; */
 }
 .hero-section>* {
   position: relative;
