--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -35,13 +35,13 @@
 @media (-webkit-min-device-pixel-ratio: 2),
 (min-resolution: 192dpi) {
   .hero-section {    
-  background-image:
+  /* background-image:
       linear-gradient(90deg,
         rgba(0, 0, 0, 0.45) 0%,
         rgba(0, 0, 0, 0.35) 30%,
         rgba(0, 0, 0, 0.15) 55%,
         rgba(0, 0, 0, 0.0) 75%),
-      url(/img/hero/block_mob@2x.jpg);
+      url(/img/hero/block_mob@2x.jpg); */
         /* linear-gradient(95.97deg,
           rgba(0, 0, 0, 0.25) 40%,
           rgba(0, 0, 0, 0.08) 70%),
