--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -56,7 +56,7 @@
   font-size: 24px;
   line-height: 1.2;
   letter-spacing: -0.02em;
-  color: rgba(129, 167, 109, 1);
+  color: rgb(108, 178, 61);
   margin-bottom: 12px;
 
 
