--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -21,10 +21,10 @@
   content: '';
   position: absolute;
   inset: 0;
-  /* background: rgba(0, 0, 0, 0.05); */
+  background: rgba(0, 0, 0, 0.10);
   /* регулируй темноту */
-  /* pointer-events: none;
-  z-index: 1; */
+  pointer-events: none;
+  z-index: 1;
 }
 .hero-section>* {
   position: relative;
@@ -34,33 +34,12 @@
 /* Mobile retina */
 @media (-webkit-min-device-pixel-ratio: 2),
 (min-resolution: 192dpi) {
-  .hero-section {    
-  /* background-image:
-      linear-gradient(90deg,
-        rgba(0, 0, 0, 0.45) 0%,
-        rgba(0, 0, 0, 0.35) 30%,
-        rgba(0, 0, 0, 0.15) 55%,
-        rgba(0, 0, 0, 0.0) 75%),
-      url(/img/hero/block_mob@2x.jpg); */
-        /* linear-gradient(95.97deg,
-          rgba(0, 0, 0, 0.25) 40%,
-          rgba(0, 0, 0, 0.08) 70%),
-        url(/img/hero/block_mob@2x.jpg); */
-    /* background-image:
-        linear-gradient(95.97deg,
-          rgba(0, 0, 0, 0.22) 30%,
-          rgba(0, 0, 0, 0) 55%),
-        url(/img/hero/block_mob@2x.jpg); */
-    /* background-image:
-        linear-gradient(95.97deg,
-          rgba(0, 0, 0, 0.28) 32%,
-          rgba(0, 0, 0, 0.05) 52%),
-        url(/img/hero/block_mob@2x.jpg); */
-    /* background-image:
-      linear-gradient(95.97deg,
-        rgba(0, 0, 0, 0.4) 36.36%,
-        rgba(0, 0, 0, 0) 51.43%),
-      url(/img/hero/block_mob@2x.jpg); */
+  .hero-section {
+    background-image:
+  linear-gradient(95.97deg,
+    rgba(0, 0, 0, 0.12) 30%,
+    rgba(0, 0, 0, 0) 55%),
+  url(/img/hero/block_mob@2x.jpg);
   }
 }
 
@@ -88,7 +67,7 @@
 }
 
 .hero-english {
-  color: rgb(231, 100, 7);
+  color: rgb(242, 81, 41);
 }
 .hero-button {
   display: inline-flex;
@@ -98,8 +77,8 @@
   z-index: 5;
   cursor: pointer;
   margin: 0 auto;
-  color:rgb(231, 100, 7); 
-  border: 5px solid rgb(231, 100, 7);
+  color:rgb(255, 255, 255);
+  border: 5px solid rgb(242, 81, 41);
   background-color: rgba(255, 255, 255, 0.2);
  
 
@@ -145,12 +124,12 @@
 }
 
 .hero-use {
-  fill: rgba(129, 167, 109, 1);
+  fill: rgb(108, 178, 61);
 }
 
 .hero-checkmark-container:hover,
 .hero-checkmark-container:focus {
-  background-color: rgba(129, 167, 109, 1);
+  background-color:rgb(108, 178, 61);
 }
 
 .hero-checkmark-container:hover .hero-use,
@@ -261,7 +240,7 @@
   content: '';
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.1);
 }
 .hero,
 .hero * {
