--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,7 +1,17 @@
 <section class="section section-reviews animated" id="reviews">
   <div class="container">
 
-    <h2 class="section-title" data-i18n-html="reviews_title"></h2>
+<!-- <h2 class="section-title animated">
+  <span data-i18n="about_title"></span>
+  <span class="title-underline"></span>
+</h2> -->
+
+
+
+    <h2 class="section-title animated">
+      <span data-i18n-html="reviews_title"></span>
+      <span class="title-underline"></span>
+    </h2>
 
     <p class="section-subtitle" data-i18n="reviews_subtitle"></p>
 
