--- a/src/css/base.css
+++ b/src/css/base.css
@@ -99,11 +99,14 @@ a {
 }
 
 .section-subtitle {
-  font-size: 24px;
-  line-height: 1.8;
-  opacity: 0.7;
+color: rgb(0, 0, 0);
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: -0.02em;    
+  opacity: 0.6;
   margin-bottom: 40px;
-  max-width: 665px;
+  max-width: 820px;
   text-align: center;
 }
 
