--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -64,6 +64,14 @@
 
 
 }
+.about_us.section-subtitle{
+  color: rgb(0, 0, 0);
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 1.7;
+    letter-spacing: -0.02em;
+    opacity: 0.7;
+}
 
 .about-item-text {
   color: rgb(0, 0, 0);
