--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -64,15 +64,17 @@
 
 
 }
-.about_us .section-subtitle {
-  color: rgb(0, 0, 0);
+.section-subtitle {
+  color: #000;
   font-size: 28px;
   font-weight: 400;
-  line-height: 1.7;
+  line-height: 1.6;
   letter-spacing: -0.02em;
   opacity: 0.7;
+  text-align: center;
+  max-width: 880px;
+  margin: 0 auto 64px;
 }
-
 .about-item-text {
   color: rgb(0, 0, 0);
   font-size: 20px;
