--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -92,10 +92,15 @@
   line-height: 1.33;
 }
 .section-subtitle {
-  font-size: 20px;
-    font-weight: 700;
-    line-height: 1.2;
-    letter-spacing: -0.02em;
+  color: #000;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 1.6;
+  letter-spacing: -0.02em;
+  opacity: 0.7;
+  text-align: center;
+  max-width: 880px;
+  margin: 0 auto 64px;
 }
 
 .review-text {
