--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -93,7 +93,7 @@
 }
 .section-subtitle {
   color: #000;
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 700;
   line-height: 1.7;
   letter-spacing: -0.02em;
@@ -104,11 +104,11 @@
 }
 
 .review-text {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.2;
-  letter-spacing: -0.4px;
-  margin-bottom: 20px;
+  color: rgb(0, 0, 0);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: -0.02em;
 }
 
 .nav-btn {
