--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -101,6 +101,12 @@
   text-align: center;
   max-width: 880px;
   margin: 0 auto 64px;
+
+  @media screen and (min-width: 768px) {
+      font-size: 18px;
+      font-weight: 400;
+        line-height: 1.5;
+    }
 }
 
 .review-text {
