--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -91,24 +91,28 @@
   font-weight: 400;
   line-height: 1.33;
 }
+/* MOBILE */
 .section-subtitle {
   color: #000;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 1.7;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
   letter-spacing: -0.02em;
   opacity: 0.7;
   text-align: center;
   max-width: 880px;
-  margin: 0 auto 64px;
-
-  @media screen and (min-width: 768px) {
-      font-size: 18px;
-      font-weight: 400;
-        line-height: 1.5;
-    }
+  margin: 0 auto 40px;
 }
 
+/* TABLET + */
+@media screen and (min-width: 768px) {
+  .section-subtitle {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.7;
+    margin-bottom: 64px;
+  }
+}
 .review-text {
   color: rgb(0, 0, 0);
     font-size: 20px;
