--- a/src/css/base.css
+++ b/src/css/base.css
@@ -262,3 +262,25 @@ a {
   opacity: 1;
   pointer-events: auto;
 }
+/* MOBILE */
+.section-subtitle {
+  color: #000;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: -0.02em;
+  opacity: 0.7;
+  text-align: center;
+  max-width: 880px;
+  margin: 0 auto 40px;
+}
+
+/* TABLET + */
+@media screen and (min-width: 768px) {
+  .section-subtitle {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.7;
+    margin-bottom: 64px;
+  }
+}
