--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -63,7 +63,7 @@
       rgba(0, 0, 0, 0.04));
   padding: 8px 12px;  
     margin-left: 0;
-    /* margin-right: auto; */
+    
 }
 
 .hero-english {
@@ -79,7 +79,7 @@
   margin: 0 auto;
   color:rgb(255, 255, 255);
   border: 5px solid rgb(242, 81, 41);
-  background-color: rgba(255, 255, 255, 0.2);
+  
  
 
   box-sizing: border-box;
@@ -91,7 +91,7 @@
 .button.hero-button:active { 
   border: 5px solid #ffffff;
   color: #ffffff;
-  background-color: rgba(255, 255, 255, 0.2);
+  /* background-color: rgba(255, 255, 255, 0.2); */
   
   
 }
